Fix feature title style on mobile

--- a/_sass/feature.scss
+++ b/_sass/feature.scss
@@ -6,15 +6,10 @@
 
 .feature-title {
 	font-size: 2rem;
-	padding-left: 1.5rem;
 
 	a {
 		color: inherit;
 		text-decoration: none;
-	}
-
-	@media only screen and (min-width: 85rem) {
-		padding-left: 0;
 	}
 }
 
@@ -501,6 +496,14 @@
 
 		.feature-footer > .data-notes {
 			border-bottom: none;
+		}
+
+		.feature-title {
+			padding-left: 1.5rem;
+
+			@media only screen and (min-width: 85rem) {
+				padding-left: 0;
+			}
 		}
 	}
 }
